--- a/db_mongo/build.gradle
+++ b/db_mongo/build.gradle
@@ -3,7 +3,7 @@
  */
 
 version = '1.1-SNAPSHOT'
-group = 'com.goexp'
+group = 'com.goexp.db'
 
 dependencies {
     // https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver
