--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,10 @@ subprojects {
     apply plugin: 'maven-publish'
 
     dependencies {
-        compile 'org.scala-lang:scala-library:2.13.2'
+        implementation 'org.scala-lang:scala-library:2.13.2'
 
-        compile 'ch.qos.logback:logback-classic:1.2.3'
-        compile group: 'com.typesafe.scala-logging', name: 'scala-logging_2.13', version: '3.9.2'
+        implementation 'ch.qos.logback:logback-classic:1.2.3'
+        implementation group: 'com.typesafe.scala-logging', name: 'scala-logging_2.13', version: '3.9.2'
     }
 
     repositories {
