--- a/db_mongo/build.gradle
+++ b/db_mongo/build.gradle
@@ -7,7 +7,6 @@ group = 'com.goexp.db'
 
 dependencies {
     // https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver
-    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.4'
-
+    implementation group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.4'
 }
 
