--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@
 
 allprojects {
     group = 'com.goexp'
-    version = '1.1.2'
+    version = '1.0.0'
 }
 
 subprojects {
@@ -12,10 +12,10 @@ subprojects {
     apply plugin: 'maven-publish'
 
     dependencies {
-        implementation 'org.scala-lang:scala-library:2.13.2'
+        compile 'org.scala-lang:scala-library:2.13.2'
 
-        implementation 'ch.qos.logback:logback-classic:1.2.3'
-        implementation group: 'com.typesafe.scala-logging', name: 'scala-logging_2.13', version: '3.9.2'
+        compile 'ch.qos.logback:logback-classic:1.2.3'
+        compile group: 'com.typesafe.scala-logging', name: 'scala-logging_2.13', version: '3.9.2'
     }
 
     repositories {
