--- a/build.gradle
+++ b/build.gradle
@@ -12,16 +12,16 @@ subprojects {
     apply plugin: 'maven-publish'
 
     dependencies {
-        compile 'org.scala-lang:scala-library:2.13.4'
+        implementation 'org.scala-lang:scala-library:2.13.4'
 
-        compile 'ch.qos.logback:logback-classic:1.2.3'
-        compile group: 'com.typesafe.scala-logging', name: 'scala-logging_2.13', version: '3.9.2'
+        implementation 'ch.qos.logback:logback-classic:1.2.3'
+        implementation group: 'com.typesafe.scala-logging', name: 'scala-logging_2.13', version: '3.9.2'
     }
 
     repositories {
         mavenLocal()
         maven {
-            url = 'http://repo.maven.apache.org/maven2'
+            url = 'https://repo.maven.apache.org/maven2'
         }
     }
 
@@ -32,9 +32,6 @@ subprojects {
             }
         }
     }
-
-    sourceCompatibility=11
-    targetCompatibility=11
 
     tasks.withType(ScalaCompile) {
         options.encoding = 'UTF-8'
