--- a/settings.gradle
+++ b/settings.gradle
@@ -4,7 +4,7 @@
 
 rootProject.name = 'goexp_lib'
 include(':core')
-include(':piplline')
+include(':pipeline')
 include(':db_mongo')
 include 'javafx'
 
